# eletter

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  SPEC.md  eletter.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: api.rst  changelog.rst  conf.py  index.rst  tutorial.rst
src/eletter/: __init__.py  classes.py  core.py  decompose.py  errors.py  util.py
test/: test_attachments.py  test_classes.py  test_compose.py  test_decompose.py  test_smooth.py  test_util.py
test/data/: sample.eml
test/data/attachments/: fibonacci.py
test/data/emails/: addresses.eml  all-bytes.eml  alt-mixed.eml  alt.eml  asparagus.eml  attachments.eml  groups.eml  has_rfc822.eml  headers.eml  html-plus-alt.eml  html.eml  mdalt.eml  mixed-alt-text.eml  mixed-alt.eml  mixed-attach.eml  mixed-html.eml  mixed-mdalt.eml  mixed-related.eml  mixed.eml  multi-html-alt.eml  multi-text-alt.eml  name-in-type.eml  no-newline-html.eml  no-newline-text.eml  null-filename.eml  one-related.eml  related-in-mixed.eml  related-start.eml  related.eml  reverse-alt.eml  signed.eml  text-plus-alt.eml  text-plus-html.eml  text.eml  twine_release.eml  twisted.eml  unattached-vcard.eml
test/test_compose/: test_attach.py  test_basic.py
